syntax = "proto3";

option go_package  = "github.com/Adarsh-Kmt/EndServer/generatedCode";


message EndServerMessage{

    string body = 1;
    string senderUsername = 2;
    string receiverUsername = 3;

}

message EndServerResponse{
    int32 status = 1;
}

service EndServerMessageService{

    rpc ReceiveMessage(EndServerMessage) returns (EndServerResponse) {}
}